--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "train",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,5 +18,6 @@
   "homepage": "https://github.com/Yuliia-Lysiuk/git-trainning#readme",
   "devDependencies": {
     "nodemon": "^2.0.16"
-  }
+  },
+  "description": ""
 }
